2007-08-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/csource.c (save_image): fixed calculation of
	alpha value (bug #466402).

2007-08-14  Sven Neumann  <sven@gimp.org>

	* libgimp/libgimp-intl.h: define Q_() for translation context.

2007-08-13  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c: include glib.h before checking for
	G_OS_WIN32. Also #define STRICT for strict type checks.

2007-08-13  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplay.c
	* app/display/gimpdisplay-render.c: formatting.

2007-08-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (ts_output_string): Use the
	string length in bytes passed in instead of recalculating it.

	* plug-ins/script-fu/tinyscheme/scheme.c: Added comment.

2007-08-13  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c (gimp_histogram_get_std_dev): corrected
	caluclation for the histogram in RGB mode (bug #466189).

2007-08-13  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpnumberpairentry.c: use italic font if not in
	user-override mode.

	* app/tools/gimprectangleoptions.c: removed auto-mode icon.

	* themes/Default/images/Makefile.am
	* themes/Default/images/stock-auto-mode-16.png
	* libgimpwidgets/gimpnumberpairentry.[ch]: removed
	GIMP_STOCK_AUTO_MODE.

2007-08-13  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_pdb_dialog_new): added missing cast.

2007-08-13  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am (libcdisplay_lcms_la_LIBADD): link with
	gdi32 on PLATFORM_WIN32.

	* modules/cdisplay_lcms.c: changed include order to fix the build
	on MingW (see bug #78265).

2007-08-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Put the auto-mode GtkImage to the right of the Aspect ratio/Size
	entry instead of to the left.

2007-08-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):