@@ -1,3 +1,8 @@
+2007-08-14  Øyvind Kolås  <pippin@gimp.org>
+
+	* app/display/gimpdisplayshell-render.c: replaced a computed lookup
+	table acceleration with fixed point logic.
+
 2007-08-14  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/csource.c (save_image): fixed calculation of
